# TacOS

./: .gitignore  Cargo.toml  Makefile  README.md  TODO  Vagrantfile  grub.cfg  linker.ld  rust-toolchain.toml  setup-42-linux.sh
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh
boot/: boot-grub.s  boot.s
src/: lib.rs  main.rs  panic.rs
src/drivers/: keyboard.rs  mod.rs  mouse.rs  port.rs  vga.rs
src/drivers/vga/: color.rs  mod.rs  vga.rs
src/gdt/: gdt.rs  mod.rs
src/io/: console.rs  cursor.rs  display.rs  fmt.rs  history.rs  input_buffer.rs  io_manager.rs  klog.rs  mod.rs  print.rs  print_engine.rs  printk.rs  scrollback.rs
src/klib/: cmd.rs  helpers.rs  memory.rs  mod.rs  stack.rs  string.rs  vga.rs
src/memory/: frame.rs  heap.rs  mod.rs  paging.rs  virt.rs
src/shell/: console.rs  mod.rs  shell.rs
src/shell/builtin/: dmesg.rs  echo.rs  mod.rs
src/ui/: console.rs  cursor.rs  display.rs  input.rs  mod.rs
target-specs/: i686-custom.json
