[package]
name = "tacos"
version = "0.1.0"
authors = [
    "Winston Hayter<hwinston@students.42.fr",
    "Julio Gonzalez <juligonz@students.42.fr"
]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
